--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ spring.mvc.static-path-pattern=/resources/**
 
 #database
 spring.datasource.url=jdbc:mysql://localhost:3306/mmsdb
-spring.datasource.password=root
-spring.datasource.username=root
+spring.datasource.password=mms_Muslim
+spring.datasource.username=mmsdb_user
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
